2009-07-28 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Fixed a bug in rcopula for claytonCopula when dependence is negative. 
	Thanks to Dominik Sznajder <dominik.sznajder@wis.kuleuven.be> for 
	reporting it.


2009-07-23 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Fixed a bug in rcopula for frankCopula when dependence is negative.
	* Default df for tCopula and tevCopula are set at 4.

2009-06-04 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Significantly improved the multiplier version of gofCopula. 
	There are no more repeatability problems and the test is slightly 
	faster. Documentation updated.

	* Fixed various warning messages. 

2009-01-22 Jun Yan <jyan@stat.uconn.edu> and Ivan Kojadinovic <ivan@stat.auckland.ac.nz>

	* Fixed a bug in the random number generation for the 
	Husler-Reiss family.

	* Changed the default optimization method in fitCopula to 
	"Nelder-Mead". 

	* Added "optim.method" parameter to "gofCopula". 

	* The functions "fitCopula" and "gofCopula" should now work 
	for the Husler-Reiss and the Galambos families. The derivatives
	w.r.t. parameters and arguments are also implemented.

	* Added conditions in "fitCopula" so that the variance is not 
	estimated if the appropriate functions are not defined.

	* Switched order of argument "copula" and "data" in fitCopula 
	to be consistent with gofCopula.

	* Changed "UseMethod" to "setGeneric" for defining generic 
	functions.

	* Documention for "gofCopula" improved.

2008-11-18  Ivan Kojadinovic  <ivan@stat.auckland.ac.nz>

	* Jun has modified the structure of "fitCopula". Inversion 
	of Spearman's rho and Kendall's tau can now be used to estimate
	the dependence parameters. The large-sample standard errors of 
	the estimates can also be computed in almost all situations. 

	* The argument list of function "fitCopula" has changed from 