@@ -71,3 +71,4 @@ export(gofEVCopula)
 
 S3method(print, indepTest)
 S3method(print, gofCopula)
+S3method(print, evTest)
