@@ -1,3 +1,14 @@
+2009-10-07 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>
+
+	* Removed dependence on package adapt, which has been withdrawn from CRAN
+	due to license issues.
+	
+
+2009-09-22 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>
+
+	* Added the function evTest that can be used to test whether data come from
+	an extreme-value copula. 
+
 2009-07-28 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>
 
 	* Fixed a bug in rcopula for claytonCopula when dependence is negative. 
